--- a/chapter_floodinundation.tex
+++ b/chapter_floodinundation.tex
@@ -45,7 +45,9 @@ An ensemble of numerical simulations detailed in Chapter \ref{chapter_events} is
 \subsection{Sensitivity analysis of the TOPMODEL \(m\) parameter}
 There are numerous user-defined parameters in the HAIL-CAESAR model (and in landscape evolution models in general) that have a wide range of potential values. Parameter selection in environmental modelling comes with a degree of uncertainty, and resulting outputs from models can be highly sensitive to the user's choice of input parameters for a given simulation \citep{Pelletier2012}. Initial testing of the HAIL-CAESAR model, and studies using the CAESAR-Lisflood model that it is based upon, show it is particularly sensitive to the \textit{m} parameter \citep{coulthard2002cellular,welsh2009testing}. The \(m\) parameter in HAIL-CAESAR is based upon an adaptation of the semi-distributed hydrological model TOPMODEL \citep{beven1979physically}. The parameter represents the rate of the rise and fall of the soil moisture store, determining how quickly a catchment responds to rainfall inputs -- sometimes referred to as the `flashiness' of a catchment. A high value of \(m\) reduces the transmissivity of the soil, leading to slower response times in the catchment, whereas a lower value of \(m\) increases soil transmissivity leading to quicker response times to rainfall input and a `flashier' hydrograph. The \(m\) value imitates the factors associated with water movement and storage in relation to the vegetation cover of a catchment; it is sometimes termed the \textit{land-use parameter} \citep{welsh2009testing} to reflect this. Typical values used for \(m\) range from 0.002--0.005 (grassland) to around 0.02 (dense forest) with the range of values in between representing a full range of vegetation covers \citep{beven1984testing,beven1997topmodel}.
 
-Initially, the experiments were designed to use the default model value of \(m = 0.002\) for grassland -- both the Boscastle and Ryedale catchments are a mixture of agricultural pasture land, some sparse vegetation, and small urban settlements -- but the dominant land cover is sparse vegetation. The default value for \(m\) was adequate in reproducing the Boscastle hydrograph noted in an earlier study \citep{wallingford2005flooding}, but the hydrological response of the Ryedale catchment was highly sensitive to the choice of \(m\) parameter. To assess the full range of sensitivity to the choice of \textit{m} parameter in the Ryedale catchment, a series of simulations were carried out with a range of \textit{m} values for both uniform and gridded rainfall inputs. Simulations of each flood event were carried out with the \textit{m} values shown in Table \ref{table-m-sens}. Each of the simulations was run with the model in hydrology-only mode, with no erosional process parameterisation switched on. To assess whether there was further sensitivity to the type of rainfall input (gridded or uniform), the sensitivity analyses were repeated with both types of rainfall input data.
+Initially, the experiments were designed to use the default model value of \(m = 0.002\) for grassland \citep{beven1984testing}. Both the Boscastle and Ryedale catchments are a mixture of agricultural pasture land, some sparse vegetation, and small urban settlements; but the dominant land cover is sparse vegetation or grassland, making the deafult \(m = 0.002\) value seem most appropriate as a first approximation. Preliminary experimentation showed that the default value of \(m = 0.002\) was adequate in reproducing the Boscastle hydrograph noted in an earlier study \citep{wallingford2005flooding} (See also Figure \ref{fig_boscastle_hydrograph_ensemble}), therefore no further detailed sensitivity analyses were carried out for Boscastle with respect to the \(m\) parameter. 
+
+For the Ryedale catchment, however, preliminary experimentation indicated that the hydrological response of the catchment was highly sensitive to the choice of \(m\) parameter. To assess the full range of sensitivity to the choice of \textit{m} parameter in the Ryedale catchment, a series of simulations were carried out with a range of \textit{m} values for both uniform and gridded rainfall inputs. Simulations of the Ryedale flood event were carried out with the \textit{m} values shown in Table \ref{table-m-sens}. Each of the simulations was run with the model in hydrology-only mode, with no erosional process parameterisation switched on. To assess whether there was further sensitivity to the type of rainfall input (gridded or uniform), the sensitivity analyses were repeated with both types of rainfall input data.
 
 \begin{table}
 \begin{tabular}{lc}
@@ -70,7 +72,11 @@ The model exhibited a strong sensitivity to the choice of the TOPMODEL \(m\) par
 
 There were differences between the hydrographs of the observed and simulated discharges in terms of peak discharge timing and recession limb shape. The measured hydrograph overlaid in Figure \ref{fig_topmodel_m_ryedale_lumped} (black dashed line) showed a sharp rise at around 50 hours after the start of the simulation period. Lower \(m\) values (\(m < 0.005\)) resulted in the prediction of the flood peak being too early compared to the observed timing, with values \textgreater \ 0.005 predicting the flood peak timing too late. Most of the simulations failed to capture the extended duration of peak discharge, which lead to a `plateaued' appearance of the measured hydrograph, lasting approximately 5--6 hours, before receding back to low flow levels. The simulation with \(m = 0.006\) came closest to predicting this plateaued hydrograph shape, but failed to predict the magnitude of water discharge correctly, underestimating the peak flow by almost 50\%. 
 
-For Ryedale simulations, it was decided to use an \(m\) value of 0.005, providing the closest possible match to the flood peak discharge, though not the true shape of the hydrograph and the receding limb. As the catchment simulations include a representation of erosion and sediment transport processes, which are often threshold dependent, it was felt necessary to match the discharge peak more closely over choosing to match the hydrograph shape precisely.
+For Ryedale simulations, it was decided to use an \(m\) value of 0.005, providing the closest possible match to the flood peak discharge, although the model was unable to capture the true shape of the hydrograph and the receding limb. As the catchment simulations include a representation of erosion and sediment transport processes, which are often threshold dependent, it was felt necessary to match the discharge peak more closely over choosing to match the hydrograph shape precisely, therefore the value of 0.005 was used.
+
+It was decided not to use different values of \(m\) for each of uniform and gridded simulations to limit the variability in parameter space in the ensemble of simulations. Although calibrating each rainfall input type with its own value of \(m\) may have produced better fitting hydrographs with the observations, the core aim of the thesis is to assess sensitivity to rainfall variability and erosion law parameterisation. Introducing variation of the \(m\) value between different simulations would have made comparing the water and sediment fluxes difficult, as they would have each been potentially controlled by \(m\) as well as either rainfall data resolution or erosion law. Using the same value of \(m\) for each catchment limits the number of variables to one in each simulation. A limitation of this approach is that most of the simulations for Ryedale actually achieved a better match with the observed hydrograph data when using the uniform rainfall inputs (Figure \ref{fig_ryedale_hydrograph_ensemble}), rather than spatially variable rainfall inputs. However, since the primary purpose of the thesis was to assess the sensitivity of the model to rainfall spatial variability and erosion law, rather than improve the forecasting ability of such models, this was deemed an acceptable compromise. Further work could also explore varying the \(m\) parameter in tandem with other variables in the model, but this is beyond the scope of the present study. 
+
+
 
 % comment on second run with gridded rainfall in ryedale
 
@@ -111,7 +117,7 @@ The hydrological response of the Ryedale catchment was more sensitive to the cho
 
 The River Rye is gauged at several locations, and flow data was recorded during the 2005 flood, though the accuracy of gauging station data is uncertain during particularly high flow events \citep{shaw2010hydrology}. The gauge data is measured at the River Rye Ness gauging station\footnote{Environment Agency gauging station F2505 -- British National Grid reference SE 69439 79196}. The outlet of the modelled catchment domain was set up to coincide (as near as possible) with the location of the Ness gauging station on the River Rye. The observed flow data from the gauging station is overlaid in Figure \ref{fig_ryedale_hydrograph_ensemble}. The gauging station data most closely matches the hydrographs produced by the uniform rainfall inputs, though it is lower than all of the simulated hydrograph, peaking at approximately 81 m\(^3\)s\(^{-1}\). A further value of peak discharge during the Ryedale flood was reported by \citet{wass2008investigation} as 105 m \(^3\)s\(^{-1}\), derived from 1D flow modelling -- the timing of this estimated peak flow was not available due to the type of model used. The value of peak discharge reported by \citet{wass2008investigation} is similar to that of the Environment Agency gauge data and the peak flows predicted by the uniform rainfall input simulations in this study. 
 
-The difference in timing of peak flow between the set of gridded rainfall input simulations and the uniform rainfall simulations is large; the gridded rainfall simulations predict the timing of peak flow being almost four hours earlier than the simulations using a uniform rainfall input. Observations reported in \citet{wass2008investigation} and the Environment Agency gauge support the predictions made by the uniform rainfall simulations in this case.
+The difference in timing of peak flow between the set of gridded rainfall input simulations and the uniform rainfall simulations is large; the gridded rainfall simulations predict the timing of peak flow being almost four hours earlier than the simulations using a uniform rainfall input. Observations reported in \citet{wass2008investigation} and the Environment Agency gauge support the predictions made by the uniform rainfall simulations in this case. However, this perhaps to be expected due to the fact the the TOPMODEL \(m\) value for Ryedale was calibrated using the uniform rainfall input data. The same value of \(m\) was then used with the gridded rainfall data (to ensure uniformity across  simulations) though it is likely to be mis-calibrated in this case. 
 
 % Please add the following required packages to your document preamble:
 % \usepackage{graphicx}
@@ -283,19 +289,21 @@ The Ryedale simulations showed less variation in flood extents between the gridd
 The aim of this chapter was to explore how modelled flood hydrology and flood inundation extents are sensitive to two external factors: the spatial resolution of precipitation inputs and the parameterisation of erosional processes. An ensemble simulation approach was taken using a cellular automaton landscape evolution and hydrological model to simulate two historic case studies of flash flooding events in the UK, varying the parameterisations of erosion and rainfall spatial resolution in each simulation. The results paint a complex picture of the competing controls of 1) spatial resolution of rainfall input and 2) erosional processes representation within the catchment.
 
 \subsection{Rainfall spatial resolution}
-In comparison to erosional parameterisation, the spatial resolution of rainfall input to the catchment exhibits a first-order control on its hydrological response during the flash flood event in both of the case studies presented here. Hydrographs from the Ryedale simulations were noticeably different in the prediction of the magnitude and timing of peak discharges, although in the smaller Boscastle catchment the differences in hydrological response were smaller, both in terms of the difference in timing of the peak flow and the peak water discharge rate. There are size differences between the two catchments studied -- the Ryedale catchment (270 km\(^2\)) is an order of magnitude larger in area than Boscastle (18 km\(^2\)) -- and such differences in catchment size have previously (although not conclusively) been argued to control the sensitivity of catchments to spatial variability in rainfall inputs \citep{krajewski1991monte,nicotina2008impact}. Although it has been argued that smaller catchments up to around 3500 km\(^2\) are largely insensitive to spatial variability in rainfall input due to a alack of heterogeneity in rainfall structures relative to the size of the catchment\citep{nicotina2008impact}, the results in this study suggest catchments around 250 km\(^2\) in size are sensitive to the spatial variability in rainfall inputs during intense rainfall events. For each simulation using gridded rainfall input, the cell width of the rainfall grid is 1 km. The relative amount of increase in rainfall detail between uniform and gridded simulations is potentially much greater in the larger Ryedale catchment than the Boscastle catchment. By using a 1 km gridded rainfall product as input data, the Ryedale simulation potentially captures 15 times more rainfall heterogeneity compared to the respective Boscastle simulation, by virtue of it simply being a much larger catchment with a greater number of rainfall input cells. 
+In comparison to erosional parameterisation, the spatial resolution of rainfall input to the catchment exhibits a first-order control on its hydrological response during the flash flood event in both of the case studies presented here. Hydrographs from the Ryedale simulations were noticeably different in the prediction of the magnitude and timing of peak discharges, although in the smaller Boscastle catchment the differences in hydrological response were smaller, both in terms of the difference in timing of the peak flow and the peak water discharge rate. There are size differences between the two catchments studied -- the Ryedale catchment (270 km\(^2\)) is an order of magnitude larger in area than Boscastle (18 km\(^2\)) -- and such differences in catchment size have previously (although not conclusively) been argued to control the sensitivity of catchments to spatial variability in rainfall inputs \citep{krajewski1991monte,nicotina2008impact}. Although it has been argued that smaller catchments up to around 3500 km\(^2\) are largely insensitive to spatial variability in rainfall input due to a alack of heterogeneity in rainfall structures relative to the size of the catchment  \citep{nicotina2008impact}, the results in this study suggest catchments around 250 km\(^2\) in size are sensitive to the spatial variability in rainfall inputs during intense rainfall events. For each simulation using gridded rainfall input, the cell width of the rainfall grid is 1 km. The relative amount of increase in rainfall detail between uniform and gridded simulations is potentially much greater in the larger Ryedale catchment than the Boscastle catchment. By using a 1 km gridded rainfall product as input data, the Ryedale simulation potentially captures 15 times more rainfall heterogeneity compared to the respective Boscastle simulation, by virtue of it simply being a much larger catchment with a greater number of rainfall input cells. 
 
 The results from this study support the general consensus that there is some degree of sensitivity in catchment hydrology to rainfall spatial inputs, but in contrast to other studies, this sensitivity may be observed in much smaller catchments than previously thought. Furthermore, the flood inundation model used in this study appears to be more sensitive to spatial heterogeneity in rainfall inputs than it is to erosional parameterisation within the model, which may extend to hydrological modelling and flood forecasting in general. Further studies with different numerical models and different rainfall events would be needed to confirm this. 
 
 The findings here potentially offer some explanation to other other studies that have shown over longer timescales, hydrological outputs from catchments simulated with spatially variable rainfall input data can see significant increases in mean annual discharge \citep{coulthard2016sensitivity}. If individual events can show notable differences in hydrological outputs, over time this will lead to larger differences in mean annual discharges. The general idea of catchment-size sensitivity to rainfall inputs is not challenged, but there is still a lack of consensus at what spatial scale this becomes an dominating factor. These findings suggest that catchments smaller than previously thought are also sensitive to rainfall spatial heterogeneity.
 
-A further aim of this study was to investigate whether spatially detailed rainfall data leads to more accurate hydrological predictions, not merely \textit{different} predictions. Where available, measurements of the timing, magnitude, and spatial distribution of flood inundation were compared with the predictions made by the numerical model. Both the Ryedale and Boscastle events were extensively studied and surveyed in their aftermath and comparisons with previous modelling studies of each event were made where these were available. With respect to the aim of improving the accuracy of flood inundation predictions with high-resolution rainfall data, the results were mixed. For the Boscastle case study, there was better agreement with the peak discharges published in the \citet{wallingford2005flooding} report when using the gridded rainfall input to drive the numerical model, though a limitation of this comparison is that the hydrographs published in the HR Wallingford report were themselves based on estimates from eyewitness observations, reconstructions from water-level marks, and one-dimensional hydraulic modelling. Nonetheless, the better agreement with other published findings is encouraging for the case of using high-resolution rainfall data in hydrological models.
+A secondary aim of this study was to investigate whether spatially detailed rainfall data leads to more accurate hydrological predictions, not merely \textit{different} predictions. Where available, measurements of the timing, magnitude, and spatial distribution of flood inundation were compared with the predictions made by the numerical model. Both the Ryedale and Boscastle events were extensively studied and surveyed in their aftermath and comparisons with previous modelling studies of each event were made where these were available. With respect to the aim of improving the accuracy of flood inundation predictions with high-resolution rainfall data, the results were mixed. For the Boscastle case study, there was better agreement with the peak discharges published in the \citet{wallingford2005flooding} report when using the gridded rainfall input to drive the numerical model, though a limitation of this comparison is that the hydrographs published in the HR Wallingford report were themselves based on estimates from eyewitness observations, reconstructions from water-level marks, and one-dimensional hydraulic modelling. Nonetheless, the better agreement with other published findings is encouraging for the case of using high-resolution rainfall data in hydrological models.
 
-In the Ryedale case study, using gridded rainfall input actually produced a less accurate prediction of the peak discharge during the flood, though the only comparison available was made with a single gauge station at the catchment outlet -- gauging station data can be unreliable during extreme flows and this may partly explain the discrepancy. In this case, the uniform rainfall data actually gave a better hydrological prediction in terms of matching the timing and rate of peak discharge during the flood. 
+In the Ryedale case study, using gridded rainfall input actually produced a less accurate prediction of the peak discharge during the flood, though the only comparison available was made with a single gauge station at the catchment outlet -- gauging station data can be unreliable during extreme flows and this may partly explain the discrepancy. In this case, the uniform rainfall data actually gave a better hydrological prediction in terms of matching the timing and rate of peak discharge during the flood. The reasons for this are discussed in the next section.
 
 % More on the m value, equifinality, Welsh study 2009.
-\subsection{Choice of \(m\) parameter value}
-The sensitivity analysis of the model \(m\) parameter was initially done using one type of rainfall input (spatially uniform) for the Ryedale catchment, and the value of \(m\) that most closely matched published hydrographs (\(m = 0.005\)) was used for all of the simulations in Table \ref{table_ensemble_experiments}. Subsequent analysis showed that a separate sensitivity analyses using the gridded rainfall input revealed a different `best-fit' value of \(m=0.0075\) when using the gridded rainfall input (Figure \ref{fig_topmodel_m_ryedale_gridded}), leading to better hydrological predictions from the gridded rainfall input simulations. This raises the issue that the model can be configured with different parameters and arrive at the same or similar predictions -- a concept referred to as equifinality and one which is often encountered in the hydrological modelling community \citep{beven1993prophecy,beven2001equifinality,ebel2006physics} -- which somewhat limits the conclusions that can be drawn from the experiments comparing uniform rainfall inputs with gridded rainfall input. In this particular case, both choices of \(m\) value are within reasonable ranges for the types of environment simulated \citep{beven1984testing}, but depending on the choice of \(m\) value, the case for using spatially variable rainfall inputs can be either strengthed or weakened. Does one chose to calibrate the model based on the type of rainfall spatial input as well, and if so, should it be calibrated further based on the type of erosional parametrisation enabled in the model? The size of the parameter space in the HAIL-CAESAR model is large, and a systematic exploration of every single combination of parameters would be time consuming if it were required for every case study to be simulated. Answering these questions of model calibration is beyond the scope of this study, but a recommendation can be made for future studies using the TOPMODEL-based runoff generation in models to assess the sensitivity to the \(m\) parameter as hydrological outputs may be highly sensitive to its value.
+\subsection{Hydrograph calibration and choice of \(m\) parameter value}
+The poorer performance of the Ryedale hydrograph forecast using the gridded rainfall data is likely due to the use of the uniform rainfall data to calibrate the Ryedale simulations and arrive at the best value of the \(m\) parameter. The same value of \(m = 0.005\) was then used in the Ryedale simulations using gridded rainfall input data, and this produces a less accurate prediction as a result (Figure \ref{fig_ryedale_hydrograph_ensemble}). In future work, it would appear necessary to calibrate the value of \(m\) for different input data sources of rainfall, rather than relying on a single value of \(m\) across all simulations of the same catchment. The simplicity of using a single \(m\) value in this study was deemed necessary to allow for easier isolation of which factors caused the most sensitivity out of rainfall spatial variability or erosion law parameterisation. The resulting limitation of this approach is that it is difficult to robustly assess the forecasting potential of the model without a further set of simulations with re-calibrated \(m\) values.
+
+Subsequent analysis showed that a separate sensitivity analyses using the gridded rainfall input revealed a different `best-fit' value of \(m=0.0075\) when using the gridded rainfall input (Figure \ref{fig_topmodel_m_ryedale_gridded}), leading to better hydrological predictions from the gridded rainfall input simulations. This raises the issue that the model can be configured with different parameters and arrive at the same or similar predictions -- a concept referred to as equifinality and one which is often encountered in the hydrological modelling community \citep{beven1993prophecy,beven2001equifinality,ebel2006physics} -- which somewhat limits the conclusions that can be drawn from the experiments comparing uniform rainfall inputs with gridded rainfall input. In this particular case, both choices of \(m\) value are within reasonable ranges for the types of environment simulated \citep{beven1984testing}, but depending on the choice of \(m\) value, the case for using spatially variable rainfall inputs can be either strengthed or weakened. Does one chose to calibrate the model based on the type of rainfall spatial input as well, and if so, should it be calibrated further based on the type of erosional parametrisation enabled in the model? The size of the parameter space in the HAIL-CAESAR model is large, and a systematic exploration of every single combination of parameters would be time consuming if it were required for every case study to be simulated. Answering these questions of model calibration is beyond the scope of this study, but a recommendation can be made for future studies using the TOPMODEL-based runoff generation in models to assess the sensitivity to the \(m\) parameter as hydrological outputs may be highly sensitive to its value.
 
 % Discussion on erosional parameterisation.
 \subsection{Erosional parameterisation}
@@ -320,7 +328,7 @@ Higher-resolution rainfall input data has the potential to improve the accuracy 
 Hydrological simulations show some sensitivity to erosional parameterisation. The amount of change in hydrological outputs and spatial distribution of flood waters is small relative to the sensitivity to rainfall spatial heterogeneity. The conclusions in this respect are similar to that of \citet{wong2015sensitivity} in that getting an accurate representation of erosional process in hydrological models is likely to be of secondary importance compared to obtaining accurate inputs of rainfall intensity and distribution. Errors in the radar-derived rainfall rate and in the radar-derived spatial distribution of rainfall are more likely to have a larger impact on model performance compared to the nuances in flood dynamics predicted by erosion-enabled simulations. An often reported consequence of large flood events is that bridged channels and culverts can become blocked  with mobilised debris (other than sediment), leading to localised changes in flood dynamics. A limitation of the HAIL-CAESAR model, and others like it, is that they cannot account for closed-channel flow and blockages from debris, but future model enhancements may enable this kind of localised change in flood hydraulics to be investigated further.
 
 \subsubsection{Summary}
-Hydrological modelling shows measurable sensitivity to the spatial variation in rainfall inputs using gridded rainfall data derived from meteorological radar. Sensitivity is more pronounced in larger catchments, though it is also noticeable in smaller catchments during extreme flood events, contrary to previously published studies. Whether or not high-resolution  rainfall data can improve hydrological model performance depends on the constraint of other model parameters, notably the \(m\) parameter, that can lead to large amounts of uncertainty in the hydrological response of a catchment to intense rainfall. Erosional parameterisation within a hydrological model -- the ability to represent changes in channel and floodplain morphology during a flash flood event -- appears to be of only secondary importance in determining the hydrological response based on the studies carried out in this investigation. Nonetheless, both erosional parameterisation and spatial distribution of rainfall remain important factors to be considered in future models of flood inundation and catchment hydrology.
+Hydrological modelling shows measurable sensitivity to the spatial variation in rainfall inputs using gridded rainfall data derived from meteorological radar. Sensitivity is more pronounced in larger catchments, though it is also noticeable in smaller catchments during extreme flood events, contrary to previously published studies. Whether or not high-resolution  rainfall data can improve hydrological model performance depends on the constraint of other model parameters, notably the \(m\) parameter, that can lead to large amounts of uncertainty in the hydrological response of a catchment to intense rainfall. It is also evident that the choice of rainfall input data resolution may require the \(m\) parameter to be re-calibrated, otherwise higher resolution rainfall data may actually produce a poorer hydrograph forecast (as evident in Figure \ref{fig_ryedale_hydrograph_ensemble}). Erosional parameterisation within a hydrological model -- the ability to represent changes in channel and floodplain morphology during a flash flood event -- appears to be of only secondary importance in determining the hydrological response based on the studies carried out in this investigation. Nonetheless, both erosional parameterisation and spatial distribution of rainfall remain important factors to be considered in future models of flood inundation and catchment hydrology.
 
 
 
