--- a/chapter_geomorph.tex
+++ b/chapter_geomorph.tex
@@ -105,14 +105,14 @@ To highlight the variation in erosion along the river channel, longitudinal chan
 % Boscastle TLIM
 \begin{figure}[htb]
 \includegraphics[width=14cm]{chp06_figures_scripts/fig_swath_profile_boscastle_erode_tlim.eps}
-\caption{Channel averaged elevation difference along the main river channel in the Valency catchment. Simulation using the transport limited erosion parametrisation. Longitudinal profile is averaged over bins spaced every 50m. Transverse averaging (across the channel) is done over a 10m wide section centred on the channel midpoint. Results from the \texttt{GRIDDED\_TLIM} simulation shown in blue and the \texttt{UNIFORM\_TLIM} simulation shown in green.}
+\caption{Channel averaged elevation difference along the main river channel in the Valency catchment. Simulation using the transport limited erosion parametrisation. Longitudinal profile is averaged over bins spaced every 50m. Transverse averaging (across the channel) is done over a 10m wide section centred on the channel midpoint. Results from the GRIDDED\_TLIM simulation shown in blue and the UNIFORM\_TLIM simulation shown in green.}
 \label{fig_boscastle_swath_tlim}
 \end{figure}
 
 % Ryedale TLIM
 \begin{figure}[htb]
 \includegraphics[width=14cm]{chp06_figures_scripts/fig_swath_profile_ryedale_erode_tlim.eps}
-\caption{Channel averaged elevation difference along the main river channel in the Ryedale catchment. Simulation using the transport limited erosion parametrisation. Longitudinal profile is averaged over bins spaced every 200m. Transverse averaging (across the channel) is done over a 10m wide section centred on the channel midpoint. Results from the \texttt{GRIDDED\_TLIM} simulation shown in blue and the \texttt{UNIFORM\_TLIM} simulation shown in green.}
+\caption{Channel averaged elevation difference along the main river channel in the Ryedale catchment. Simulation using the transport limited erosion parametrisation. Longitudinal profile is averaged over bins spaced every 200m. Transverse averaging (across the channel) is done over a 10m wide section centred on the channel midpoint. Results from the GRIDDED\_TLIM erosion simulation shown in blue and the UNIFORM\_TLIM simulation shown in green.}
 \label{fig_ryedale_swath_tlim}
 \end{figure}
 
@@ -167,7 +167,7 @@ As with the Boscastle simulations, the most obvious contrast in erosion amounts 
 % Full extent erosion maps
 \begin{sidewaysfigure}[t]
 \includegraphics[width=25cm]{chp06_figures_scripts/boscastle_erodediff_grid_tlim.png}
-\caption{Boscastle. Map of extent of catchment change in elevation greater than 0.02m. Change in elevation shown after 72 hours of model simulation using gridded rainfall and the transport limited erosion law. Output from the gridded rainfall input, transport-limited erosion simulatio(GRIDDED\_TLIM). Logarithmic scale for erosion.}
+\caption{Boscastle. Map of extent of catchment change in elevation greater than 0.02m. Change in elevation shown after 72 hours of model simulation using gridded rainfall and the transport limited erosion law. Output from the gridded rainfall input, transport-limited erosion simulation (GRIDDED\_TLIM). Logarithmic scale for erosion.}
 \label{fig_boscastle_erodediff_grid_tlim}
 \end{sidewaysfigure}
 
@@ -198,13 +198,13 @@ As with the Boscastle simulations, the most obvious contrast in erosion amounts 
 
 \begin{figure}[htb]
 \includegraphics[width=16cm]{chp06_figures_scripts/figure_ryedale_elev_diff_grid_tlim_UPPER.eps}
-\caption{Ryedale, upper Rye channel. Map of extent of erosion and deposition greater than 0.02m in magnitude. Change in elevation shown after 72 hours of model simulation using gridded rainfall and the transport-limited erosion law (\texttt{GRIDDED\_TLIM}). Logarithmic scale for erosion.}
+\caption{Ryedale, upper Rye channel. Map of extent of erosion and deposition greater than 0.02m in magnitude. Change in elevation shown after 72 hours of model simulation using gridded rainfall and the transport-limited erosion law (GRIDDED\_TLIM). Logarithmic scale for erosion.}
 \label{fig_ryedale_erodediff_UPPER_gridded_tlim}
 \end{figure}
 
 \begin{figure}[htb]
 \includegraphics[width=16cm]{chp06_figures_scripts/figure_ryedale_elev_diff_grid_dlim_UPPER.eps}
-\caption{Ryedale, upper Rye channel. Map of extent of erosion and deposition greater than 0.02m in magnitude. Change in elevation shown after 72 hours of model simulation using gridded rainfall and the detachment-limited erosion law (\texttt{GRIDDED\_DLIM}). Logarithmic scale for erosion.}
+\caption{Ryedale, upper Rye channel. Map of extent of erosion and deposition greater than 0.02m in magnitude. Change in elevation shown after 72 hours of model simulation using gridded rainfall and the detachment-limited erosion law (GRIDDED\_DLIM). Logarithmic scale for erosion.}
 \label{fig_ryedale_erodediff_UPPER_gridded_dlim}
 \end{figure}
 
