--- a/chapter_hailcaesar.tex
+++ b/chapter_hailcaesar.tex
@@ -90,7 +90,9 @@ Surface water and channel flow is an important driver of catchment scale erosion
 Q = \frac{q - g h_{flow} \Delta T \frac{\Delta (h+z) }{\Delta x}}{1 + g h_{flow} \Delta t n^2 |q| / h_{flow}^{10/3}} \Delta x
 \end{equation}
 
+
 \subsubsection{Sediment transport and erosion}
+\label{trans_model}
 
 Transport of loose sediment is governed by the \citet{wilcock2003surface} sediment transport model. The Wilcock and Crowe model represents transport of mixed sand/gravel fractions based on the surface sediment composition. The rate of sediment transport, \(q_i\), is given as:
 
