--- a/literature.bib
+++ b/literature.bib
@@ -4649,7 +4649,7 @@ DOI = {10.5194/hess-2016-530}
   year={2004}
 }
 @misc{NRFA,
-  title = {{National River Flow Archive}},
+  author = {{National River Flow Archive}},
   howpublished = {\url{https://nrfa.ceh.ac.uk/}},
   note = {Accessed: 2016-05-01},
   year = {2016}
